Automaic update daterange calendars when changing search.

--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -134,7 +134,10 @@
 		<script src="{% static 'js/home.js'%}"></script>
 		<script src="{% static 'js/show_cabins.js'%}"></script>
 		<script src="{% static 'js/booking_contact.js'%}"></script>
-		<script src="{% static 'js/booking_overview.js'%}"></script>
+		
+		{% block js %}
+
+		{% endblock %}
 
 	</body>
 
