Fixed intern booking bug. Fixed bug in double_booked method in main.models.Booking.

--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -27,6 +27,7 @@
 			<link rel="stylesheet" type="text/x-scss" href="/static/scss/booking/booking_contact.scss" />
 			<link rel="stylesheet" type="text/x-scss" href="/static/scss/booking/payment_booking.scss" />
 			<link rel="stylesheet" type="text/x-scss" href="/static/scss/booking/booking_confirmation.scss" />
+			<link rel="stylesheet" type="text/x-scss" href="/static/scss/intern/intern_booking.scss" />
 		{% endcompress %} 
 
 		
