--- a/staticfiles/scss/common/common_classes.scss
+++ b/staticfiles/scss/common/common_classes.scss
@@ -84,6 +84,15 @@ h1, h2, h3, h4, h5, h6, p, td{
 	width: 100%;
 }
 
+.trans-input{
+	border: 0px;
+	background-color: transparent;
+}
+
+.center-text{
+	text-align: center;
+}
+
 .default-input-label{
 	//line-height: 10px;
 	margin-bottom: 0px;
